data/derived/comb/progs/unify/prog8357.ml.out
Characters 89-90:
  List.fold_left f base fs;;
                 ^
Error: This expression has type
         (('a -> 'b) -> 'a) -> 'c -> ('a -> 'b) -> ('a -> 'b) -> 'b
       but an expression was expected of type
         (('a -> 'b) -> 'a) -> 'c -> ('a -> 'b) -> 'a
       The type variable 'a occurs inside ('a -> 'b) -> 'b
